# parallax-markets

./: .env.example  .gitignore  CLAUDE.md  README.md  RESEARCH.md  docker-compose.yml  interface_out_A.md  interface_out_B.md  interface_out_C.md  interface_out_D.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/config/: scenario_hormuz.yaml
backend/data/bench/: forecasts_claude-haiku-4-5-20251001.jsonl  forecasts_claude-opus-4-8.jsonl  forecasts_claude-sonnet-4-6.jsonl
backend/scripts/: cron_pipeline.sh
backend/src/parallax/: main.py
backend/src/parallax/agents/: country_agent.py  registry.py  router.py  runner.py  schemas.py
backend/src/parallax/backtest/: __init__.py  engine.py  look_ahead_guard.py  report.py  runner.py
backend/src/parallax/bench/: __init__.py  forecast.py  kalshibench.py
backend/src/parallax/budget/: tracker.py
backend/src/parallax/cli/: brief.py  kalshibench.py
backend/src/parallax/config/: risk.py
backend/src/parallax/contracts/: mapping_policy.py  registry.py  schemas.py
backend/src/parallax/costs/: fee_model.py
backend/src/parallax/dashboard/: app.py  data.py
backend/src/parallax/db/: queries.py  runtime.py  schema.py  writer.py
backend/src/parallax/divergence/: detector.py
backend/src/parallax/ingestion/: crisis_ingester.py  dedup.py  entities.py  gdelt.py  gdelt_doc.py  google_news.py  oil_prices.py  truth_social.py
backend/src/parallax/markets/: kalshi.py  polymarket.py  schemas.py
backend/tests/: conftest.py  test_agent_router.py  test_agent_runner.py  test_agent_schemas.py  test_backtest_look_ahead.py  test_bench_forecast.py  test_brief.py  test_brief_resilience.py  test_budget_tracker.py  test_calibration.py  test_calibration_metrics.py  test_cascade.py  test_circuit_breaker.py  test_cold_start_floors.py  test_config.py  test_contracts_schemas.py  test_crisis_context.py  test_crisis_context_db.py  test_dashboard_data.py  test_dashboard_endpoints.py  test_dashboard_queries.py  test_dedup.py  test_detector_costs.py  test_divergence.py  test_edge_decay_over_time.py  test_engine.py  test_ensemble.py  test_experiment_tags.py  test_fee_model.py  test_gdelt_doc.py  test_gdelt_filter.py  test_google_news.py  test_h3_utils.py  test_kalshi.py  test_kelly_sizing.py  test_ledger.py  test_llm_usage.py  test_mapping_discount.py  test_mapping_policy.py  test_ops_events.py  (+21 more)
(+289 files in other folders)
