[project]
name = "parallax"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "duckdb>=1.2",
    "anthropic>=0.52",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "cryptography>=44.0",
    "truthbrush>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-httpx>=0.35,<0.36",
]

[project.scripts]
parallax-brief = "parallax.cli.brief:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
